--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dev-inspector": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "recharts": "^2.12.7",
     "tailwindcss": "^3.4.1",
     "yarn": "^1.22.21"
   },
