--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "recharts": "^2.12.7",
+    "styled-components": "^6.1.11",
     "tailwindcss": "^3.4.1",
     "yarn": "^1.22.21"
   },
